# src/routes/publicRoutes.js
@@ -17,15 +17,17 @@ const loginSchema = require('../validations/loginValidation.js');
 
 const Routes = express.Router();
 
-Routes.use(idValidation());
 
 // routes
 Routes.get('/procedures', procedures.getAll);
 Routes.get('/products/pages/:num', products.getAll);
-Routes.get('/products/:id', products.getById);
 Routes.get('/discount/:code', discount.getByCode);
 Routes.post('/register', bodyValidation(clientSchema), client.add);
 Routes.get('/login', bodyValidation(loginSchema), login.login)
+Routes.get("/search",products.search);
+
+Routes.use(idValidation());
+Routes.get('/products/:id', products.getById);
 Routes.get('/products/:id', products.getById);
 
 module.exports = Routes;
